style: fix column jump css

--- a/ui/components/Filter/filter.module.css
+++ b/ui/components/Filter/filter.module.css
@@ -32,8 +32,7 @@
     border-right: 1px solid #00000020;
     display: inline-block;
     height: 100%;
-    max-width: 30em;
-    min-width: 15em;
+    max-width: 20em;
     position: initial;
     width: 30%;
   }
