--- a/ui/components/JobContainer/jobContainer.module.css
+++ b/ui/components/JobContainer/jobContainer.module.css
@@ -8,9 +8,6 @@
 
 @media screen and (min-width: 769px) {
   .container {
-    display: flex;
     flex-direction: row;
-    flex-grow: 1;
-    position: relative;
   }
 }
