--- a/ui/components/JobList/jobList.module.css
+++ b/ui/components/JobList/jobList.module.css
@@ -7,5 +7,6 @@
 @media screen and (min-width: 769px) {
   .container {
     padding-top: .5em;
+    width: 70%;
   }
 }
